# Hocus-Pocus

./: .gitignore  README.md  config.py  main.py  pyproject.toml
data/: .gitkeep
output/: .gitkeep
src/: __init__.py
src/audio/: __init__.py  audio_loader.py  audio_recorder.py  audio_visualizer.py  spectrogram_processor.py
src/cli/: __init__.py  database_optimizer.py  folder_upload.py  identification.py  interface.py
src/core/: __init__.py  engine.py  fingerprint_generator.py
src/database/: __init__.py  database_manager.py
tests/: debug_matching.py  debug_test.py  debug_types.py  test_auto_optimization.py
tools/: analyze_database.py  optimize_database.py
